# steam-meter

./: .gitignore  README.md  manifest.json  pyproject.toml
src/: background.js  config.py  content.js  main.py  popup.html  popup.js
src/backend/: api.py  app.py  config.py  pyproject.toml
src/backend/nlp/: __init__.py  sentiment.py
src/css/: popup.css
src/nlp/: __init__.py  sentiment.py
src_py/: main.py
src_py/nlp/: __init__.py  sentiment.py
