[project]
name = "backend"
version = "0.1.0"
description = "Backend of steam-meter handling natural language processing features"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "gunicorn>=23.0.0",
    "nltk>=3.9.2",
    "pydantic>=2.12.4",
]
